Docs for update and delete project
