# docs/swagger.yml
@@ -215,10 +215,83 @@ paths:
           description: "Unauthorized"
         403:
           description: "Access denied"
+        404:
+          description: "Not found!"
+        500:
+          description: "Internal server error"
+
+    put:
+      tags:
+        - "projects"
+      summary: "Update project info"
+      description: ""
+      produces:
+        - "application/json"
+      consumes:
+        - "application/json"
+      parameters:
+        - in: "path"
+          name: "project"
+          type: "integer"
+          required: true
+          description: "Id of project"
+        - name: "CoreAccountUpdateProjectRequestBody"
+          in: "body"
+          description: "Body of request for register new user"
+          required: true
+          schema:
+            $ref: "#/definitions/CoreAccountUpdateProjectRequestModel"
+      responses:
+        200:
+          description: "Successful operation"
+        401:
+          description: "Unauthorized"
+        403:
+          description: "Access denied"
+        404:
+          description: "Not found!"
+        500:
+          description: "Internal server error"
+
+    delete:
+      tags:
+        - "projects"
+      summary: "Delete project"
+      description: ""
+      produces:
+        - "application/json"
+      parameters:
+        - in: "path"
+          name: "project"
+          type: "integer"
+          required: true
+          description: "Id of project"
+      responses:
+        200:
+          description: "Successful operation"
+        401:
+          description: "Unauthorized"
+        403:
+          description: "Access denied"
+        404:
+          description: "Not found!"
         500:
           description: "Internal server error"
 
 definitions:
+
+  CoreAccountUpdateProjectRequestModel:
+    type: "object"
+    required:
+      - "name"
+      - "format_id"
+    properties:
+      name:
+        type: "string"
+      description:
+        type: "string"
+      format_id:
+        type: "integer"
 
   CoreAccountProjectsListModel:
     type: "object"
